fix(api): corregir listado y validaciones de ciudades